JSTests/stress/eval-in-arrow-function.js
@@ -3,21 +3,6 @@ function shouldBe(actual, expected) {
         throw new Error(`bad value: ${String(actual)}`);
 }
 
-function shouldThrow(func, errorMessage) {
-    var errorThrown = false;
-    var error = null;
-    try {
-        func();
-    } catch (e) {
-        errorThrown = true;
-        error = e;
-    }
-    if (!errorThrown)
-        throw new Error('not thrown');
-    if (String(error) !== errorMessage)
-        throw new Error(`bad error: ${String(error)}`);
-}
-
 var global = this;
 for (var i = 0; i < 100; ++i) {
     (() => {
