JSTests/stress/rest-elements.js
@@ -3,21 +3,6 @@ function shouldBe(actual, expected) {
         throw new Error('bad value: ' + actual);
 }
 
-function shouldThrow(func, errorMessage) {
-    var errorThrown = false;
-    var error = null;
-    try {
-        func();
-    } catch (e) {
-        errorThrown = true;
-        error = e;
-    }
-    if (!errorThrown)
-        throw new Error('not thrown');
-    if (String(error) !== errorMessage)
-        throw new Error(`bad error: ${String(error)}`);
-}
-
 function testSyntaxError(script, message) {
     var error = null;
     try {
